[metadata]
name = elicited
version = 0.0.3
author = Ryan McGeehan
author_email = elicited@r10n.com
description = Helpers for expert elicitation into distributions.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/magoo/elicitation
project_urls =
    Bug Tracker = https://github.com/magoo/elicitation/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    numpy
    scipy

[options.packages.find]
where = src